--- a/index.html
+++ b/index.html
@@ -1,19 +1,3 @@
-<?php
-
-$dsn = 'mysql:dbname=test_DB;host=localhost;';
-$user = 'akedo';
-$password = 'doraminG23!';
-try {
-    $dbh = new PDO($dsn, $user, $password);
-  	
-  	$sql = "select * from sample;";
-	$result = $dbh -> query($sql);
-} catch (PDOException $e) {
-    print "Failed: " . $e->getMessage() . "\n";
-    exit();
-}	
-?>
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -71,13 +55,21 @@ try {
                         </tr>
                     </thead>
                     <tbody>
-						<?php foreach($result as $value){ ?>
                         <tr>
-                            <th><?php echo '$value[id]'; ?></th>
-                            <td><?php echo '$value[name]'; ?></td>
-                            <td><?php echo '$value[age]'; ?></td>
-						</tr>
-						<?php}?>
+                            <th>1</th>
+                            <td>test</td>
+                            <td>20</td>
+                        </tr>
+                        <tr>
+                            <th>2</th>
+                            <td>test</td>
+                            <td>20</td>
+                        </tr>
+                        <tr>
+                            <th>3</th>
+                            <td>test</td>
+                            <td>20</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
